--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,7 +20,9 @@
     "module": "ES2022",
     "useDefineForClassFields": false,
     "lib": ["ES2022", "dom"],
-    "paths": {},
+    "paths": {
+      "interfaces": ["libs/interfaces/src/index.ts"]
+    },
     "rootDir": "."
   },
   "angularCompilerOptions": {
