--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "nx",
-    "start": "nx serve",
-    "build": "nx build",
+    "start": "nx run-many --target=serve --all",
+    "build": "nx run-many --target=build --all",
     "watch": "nx build --watch --configuration development",
     "test": "nx test",
     "lint": "ng lint"
