--- a/package.json
+++ b/package.json
@@ -24,15 +24,19 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
     "@ngrx/effects": "^15.0.0",
     "@ngrx/store": "^15.0.0",
     "@ngrx/store-devtools": "^15.0.0",
     "@nrwl/angular": "^15.3.3",
     "@nrwl/workspace": "^15.3.3",
     "moment": "^2.29.4",
+    "pg": "^8.8.0",
+    "postgres": "^3.3.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "typeorm": "^0.3.11",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
