--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@angular/cli": "~15.0.0",
     "@angular/compiler-cli": "~15.0.0",
     "@angular/language-service": "~15.0.0",
+    "@nestjs/jwt": "^10.0.1",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@nrwl/eslint-plugin-nx": "15.3.3",
@@ -59,11 +60,14 @@
     "@nrwl/nest": "15.3.3",
     "@nrwl/node": "15.3.3",
     "@nrwl/workspace": "15.3.3",
+    "@types/bcrypt": "^5.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/jest": "28.1.1",
     "@types/node": "18.7.1",
+    "@types/passport-jwt": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "5.44.0",
     "@typescript-eslint/parser": "5.44.0",
+    "bcrypt": "^5.1.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "8.1.0",
     "jasmine-core": "~4.5.0",
@@ -76,6 +80,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "nx": "15.3.3",
+    "passport-jwt": "^4.0.1",
     "prettier": "^2.6.2",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
