--- a/libs/interfaces/project.json
+++ b/libs/interfaces/project.json
@@ -1,22 +1,26 @@
 {
   "name": "interfaces",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/interfaces/src",
   "projectType": "library",
+  "sourceRoot": "libs/interfaces/src",
+  "prefix": "app",
   "targets": {
-    "lint": {
-      "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["libs/interfaces/**/*.ts"]
-      }
-    },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "libs/interfaces/jest.config.ts",
         "passWithNoTests": true
+      }
+    },
+    "lint": {
+      "executor": "@nrwl/linter:eslint",
+      "outputs": ["{options.outputFile}"],
+      "options": {
+        "lintFilePatterns": [
+          "libs/interfaces/**/*.ts",
+          "libs/interfaces/**/*.html"
+        ]
       }
     }
   },
