--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~15.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "@ngrx/effects": "^15.0.0",
@@ -33,6 +34,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "moment": "^2.29.4",
+    "passport-local": "^1.0.0",
     "pg": "^8.8.0",
     "postgres": "^3.3.2",
     "reflect-metadata": "^0.1.13",
@@ -61,13 +63,17 @@
     "@nrwl/node": "15.3.3",
     "@nrwl/workspace": "15.3.3",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/jasmine": "~4.3.0",
     "@types/jest": "28.1.1",
     "@types/node": "18.7.1",
+    "@types/passport": "^1.0.11",
     "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.34",
     "@typescript-eslint/eslint-plugin": "5.44.0",
     "@typescript-eslint/parser": "5.44.0",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "8.1.0",
     "jasmine-core": "~4.5.0",
@@ -80,6 +86,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "nx": "15.3.3",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "prettier": "^2.6.2",
     "ts-jest": "28.0.5",
