separated login/registration pages via routing

--- a/apps/frontend/project.json
+++ b/apps/frontend/project.json
@@ -24,8 +24,7 @@
       },
       "configurations": {
         "production": {
-          "budgets": [
-            {
+          "budgets": [{
               "type": "initial",
               "maximumWarning": "500kb",
               "maximumError": "2mb"
